@@ -9,6 +9,8 @@
       geda_get_accel_group_is_locked in geda_widget_get_accel_path and macro
       geda_get_widget_window in geda_widget_set_pointer_position.
 
+    * src/widgets/geda_accel_label.c: Utilize geda_get_widget_requisition macro.
+
 2020-01-15 Wiley E. Hill <wileyhill@gmail.com>
 
     * include/geda_gtk_compat.h: Add macro geda_get_widget_requisition when
